--- a/app/src/main/res/layout/choose.xml
+++ b/app/src/main/res/layout/choose.xml
@@ -3,36 +3,88 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+
+    android:background="#FBB315">
+
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="320dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="serif"
+        android:text="Welcome !"
+        android:textColor="#455560"
+        android:textSize="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="238dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="168dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/video"
+        app:srcCompat="@drawable/renault" />
 
     <Button
-        android:id="@+id/btnLive"
+        android:id="@+id/goLive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="198dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginBottom="127dp"
-        android:text="LIVE"
-        app:layout_constraintBottom_toTopOf="@+id/btnVideo"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="257dp"
+        android:background="@drawable/rounded_rectangle"
+        android:focusable="true"
+        android:text="GO live"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/btnVideo"
-        android:layout_width="wrap_content"
+        android:id="@+id/video"
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="127dp"
-        android:layout_marginEnd="151dp"
-        android:layout_marginBottom="310dp"
-        android:text="import a video"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="189dp"
+        android:background="@drawable/rounded_rectangle"
+        android:focusable="true"
+        android:text="Import a video"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLive" />
+        app:layout_constraintTop_toBottomOf="@+id/goLive"></Button>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="338dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="88dp"
+        android:text="Renault Pose Detector is an innovative \n mobile application designed to improve \n the safety and efficiency of workers in the automotive industry."
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/goLive"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
